--- a/destinos.html
+++ b/destinos.html
@@ -36,37 +36,37 @@
 
     <div class="gallery" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:24px;margin-top:32px;">
       <article class="card">
-        <img src="dest1.jpg" alt="Cabo Polonio">
+        <img src="gal11.jpg" alt="Cabo Polonio">
         <h3>Cabo Polonio</h3>
         <p>Un paraíso natural sin calles ni autos, dunas y lobos marinos. Ideal para desconectar.</p>
         <a href="rio.html" class="btn">Ver más</a>
       </article>
       <article class="card">
-        <img src="dest2.jpg" alt="Valle Edén">
-        <h3>Valle Edén</h3>
-        <p>Senderos, leyendas y naturaleza en el corazón de Tacuarembó. Perfecto para aventureros.</p>
+        <img src="gal12.jpeg" alt="Bariloche2">
+     <h3>Bariloche</h3>
+<p>Lagos, montañas y chocolate artesanal en la Patagonia argentina. Ideal para amantes de la aventura y la naturaleza.</p>
         <a href="rio.html" class="btn">Ver más</a>
       </article>
       <article class="card">
-        <img src="dest3.jpg" alt="La Paloma">
+        <img src="gal9.jpg" alt="La Paloma">
         <h3>La Paloma</h3>
         <p>Playas extensas, surf y atardeceres inolvidables. El balneario ideal para familias y jóvenes.</p>
         <a href="rio.html" class="btn">Ver más</a>
       </article>
       <article class="card">
-        <img src="gal4.jpg" alt="Salto Termal">
+        <img src="gal13.jpg" alt="Salto Termal">
         <h3>Salto Termal</h3>
         <p>Relajación total en aguas termales, parques acuáticos y hoteles spa. Ideal para descansar.</p>
         <a href="rio.html" class="btn">Ver más</a>
       </article>
       <article class="card">
-        <img src="gal5.jpg" alt="Montevideo Cultural">
+        <img src="gal10.jpg" alt="Montevideo Cultural">
         <h3>Montevideo Cultural</h3>
         <p>Teatros, museos, ferias y gastronomía. La capital uruguaya te espera con propuestas todo el año.</p>
         <a href="rio.html" class="btn">Ver más</a>
       </article>
       <article class="card">
-        <img src="gal6.jpg" alt="Río de Janeiro">
+        <img src="gal1.jpg" alt="Río de Janeiro">
         <h3>Río de Janeiro</h3>
         <p>La ciudad maravillosa: playas, samba y cultura brasileña. Salidas internacionales desde San José.</p>
         <a href="rio.html" class="btn">Ver más</a>
