--- a/index.html
+++ b/index.html
@@ -148,26 +148,41 @@
   <!-- GALERÍA -->
 <section id="galeria" class="section">
   <h3 class="fade-in" style="text-align:center; margin-bottom:30px; animation-delay: 0.2s;">📸 Galería de recuerdos</h3>
-  <div class="gallery-grid">
-    <div class="gallery-item fade-in" style="animation-delay: 0.4s;">
-      <img src="gal1.jpg" alt="Excursión en Colonia del Sacramento">
-    </div>
-    <div class="gallery-item fade-in" style="animation-delay: 0.6s;">
-      <img src="gal2.jpg" alt="Playa de Punta del Este">
-    </div>
-    <div class="gallery-item fade-in" style="animation-delay: 0.8s;">
-      <img src="gal3.jpg" alt="Cristo Redentor en Río de Janeiro">
-    </div>
-    <div class="gallery-item fade-in" style="animation-delay: 1s;">
-      <img src="gal4.jpg" alt="Bus de El Turista en viaje">
-    </div>
-    <div class="gallery-item fade-in" style="animation-delay: 1.2s;">
-      <img src="gal5.jpg" alt="Grupo de viajeros disfrutando">
-    </div>
-    <div class="gallery-item fade-in" style="animation-delay: 1.4s;">
-      <img src="gal6.jpg" alt="Paisaje de montaña">
-    </div>
+<div class="gallery-grid">
+  <div class="gallery-item fade-in" style="animation-delay: 0.4s;">
+    <img src="gal1.jpg">
   </div>
+  <div class="gallery-item fade-in" style="animation-delay: 0.6s;">
+    <img src="gal2.jpg">
+  </div>
+  <div class="gallery-item fade-in" style="animation-delay: 0.8s;">
+    <img src="gal3.jpg">
+  </div>
+  <div class="gallery-item fade-in" style="animation-delay: 1s;">
+    <img src="gal4.jpg">
+  </div>
+  <div class="gallery-item fade-in" style="animation-delay: 1.2s;">
+    <img src="gal5.jpg">
+  </div>
+  <div class="gallery-item fade-in" style="animation-delay: 1.4s;">
+    <img src="gal6.jpg">
+  </div>
+  <div class="gallery-item fade-in" style="animation-delay: 1.6s;">
+    <img src="gal9.jpg">
+  </div>
+  <div class="gallery-item fade-in" style="animation-delay: 1.8s;">
+    <img src="gal10.jpg">
+  </div>
+  <div class="gallery-item fade-in" style="animation-delay: 2s;">
+    <img src="gal11.jpg">
+  </div>
+  <div class="gallery-item fade-in" style="animation-delay: 2.2s;">
+    <img src="gal12.jpeg">
+  </div>
+</div>
+
+</div>
+
   <style>
 .gallery-grid {
   display: grid;
