--- a/sobre.html
+++ b/sobre.html
@@ -84,6 +84,38 @@
     .cta-box a:hover {
       background: var(--secondary);
     }
+    .bus-gallery {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+  margin-bottom: 2rem;
+}
+
+.bus-gallery img {
+  width: 48%;
+  max-width: 600px;
+  border-radius: 16px;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.08);
+  display: block;
+}
+
+@media (max-width: 768px) {
+  .about-section {
+    text-align: center;
+  }
+
+  .bus-gallery {
+    flex-direction: column;
+    align-items: center;  /* centra las imágenes en columna */
+    gap: 20px;            /* separación entre imágenes */
+  }
+
+  .bus-gallery img {
+    width: 90%;           /* ocupan casi todo el ancho disponible */
+    max-width: 500px;     /* para que no queden gigantes en pantallas grandes */
+  }
+}
   </style>
 </head>
 <body>
@@ -134,9 +166,9 @@
   <h3 style="text-align:center; font-size:2rem; margin-bottom:30px;">🚌 Nuestro Bus — Confort y Seguridad</h3>
 
   <!-- Imagen del bus -->
-  <div style="display:flex; justify-content:center; gap:20px; margin-bottom:30px; flex-wrap:wrap;">
-  <img src="elturistabus2.jpg" alt="Nuestro bus — 48 plazas, seguro y cómodo" style="width:48%; max-width:600px; border-radius:16px; box-shadow:0 6px 20px rgba(0,0,0,0.08);">
-  <img src="elturistabus3.jpg" alt="Nuestro bus — 48 plazas, seguro y cómodo" style="width:48%; max-width:600px; border-radius:16px; box-shadow:0 6px 20px rgba(0,0,0,0.08);">
+<div class="bus-gallery">
+  <img src="elturistabus2.jpg" alt="Nuestro bus — 48 plazas, seguro y cómodo">
+  <img src="elturistabus3.jpg" alt="Nuestro bus — 48 plazas, seguro y cómodo">
 </div>
 
 
