--- a/blog.html
+++ b/blog.html
@@ -11,146 +11,182 @@
 
   <!-- Estilos -->
   <link rel="stylesheet" href="styles.css">
-  <style>
-    /* Estilos exclusivos de esta página */
-    body { font-family: 'Nunito', sans-serif; margin:0; padding:0; }
-    header { margin-bottom: 3rem; }
+ <style>
+body { font-family: 'Nunito', sans-serif; margin:0; padding:0; }
+header { margin-bottom: 3rem; }
 
-    .blog-hero {
-      text-align: center;
-      padding: 80px 20px;
-      background: linear-gradient(135deg, var(--primary,#0077ff), var(--secondary,#00c3ff));
-      color: #fff;
-      border-radius: 20px;
-      margin-bottom: 40px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-    }
-    .blog-hero h2 { font-size: 2.4rem; margin-bottom: 10px; }
-    .blog-hero p { font-size: 1.1rem; opacity: 0.9; }
+.blog-hero {
+  text-align: center;
+  padding: 5rem 1.25rem;
+  background: linear-gradient(135deg, var(--primary,#0077ff), var(--secondary,#00c3ff));
+  color: #fff;
+  border-radius: 1.25rem;
+  margin-bottom: 2.5rem;
+  box-shadow: 0 0.625rem 1.5625rem rgba(0,0,0,0.15);
+}
+.blog-hero h2 { font-size: 2.4rem; margin-bottom: 0.625rem; }
+.blog-hero p { font-size: 1.1rem; opacity: 0.9; }
 
-    .grid {
-      display: grid;
-      gap: 24px;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    }
-
-    .card {
-      background: #fff;
-      border-radius: 16px;
-      padding: 20px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.08);
-      transition: transform 0.2s;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-    .card:hover { transform: translateY(-5px); }
-
-    .category {
-      display: inline-block;
-      font-size: 13px;
-      font-weight: 600;
-      color: #fff;
-      background: var(--primary,#0077ff);
-      padding: 4px 10px;
-      border-radius: 8px;
-      margin-bottom: 12px;
-    }
-
-    .card button.cta-link {
-      background: var(--secondary,#00c3ff);
-      border: none;
-      color: #fff;
-      padding: 10px 16px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: 600;
-      transition: background 0.2s;
-    }
-    .card button.cta-link:hover { background: var(--primary,#0077ff); }
-
-
-  /* ------------------ CTA BOX ------------------ */
-
-    .cta-box { text-align: center; margin-top: 50px; }
-    .cta-box a {
-      display:inline-block;
-      background: var(--primary,#0077ff);
-      color:#fff;
-      padding:16px 28px;
-      border-radius:12px;
-      font-weight:700;
-      font-size:1.1rem;
-      text-decoration:none;
-      transition: background 0.2s;
-    }
-    .cta-box a:hover { background: var(--secondary,#00c3ff); }
-
-/* ------------------ Modal estilo nota de viaje ------------------ */
-/* ------------------ MODAL ESTILO STICKY NOTE ------------------ */
-.modal {
-  display: none; /* oculto por defecto */
-  position: fixed;
-  z-index: 999;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0,0.4);
-
-  /* centrar contenido usando flex solo cuando esté visible */
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
+.grid {
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: repeat(auto-fit, minmax(17.5rem, 1fr));
 }
 
+.card {
+  background: #fff;
+  border-radius: 1rem;
+  padding: 1.25rem;
+  box-shadow: 0 0.5rem 1.5rem rgba(0,0,0,0.08);
+  transition: transform 0.2s;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.card:hover { transform: translateY(-0.3125rem); }
+
+.category {
+  display: inline-block;
+  font-size: 0.8125rem;
+  font-weight: 600;
+  color: #fff;
+  background: var(--primary,#0077ff);
+  padding: 0.25rem 0.625rem;
+  border-radius: 0.5rem;
+  margin-bottom: 0.75rem;
+}
+
+.card button.cta-link {
+  background: var(--secondary,#00c3ff);
+  border: none;
+  color: #fff;
+  padding: 0.625rem 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-weight: 600;
+  transition: background 0.2s;
+}
+.card button.cta-link:hover { background: var(--primary,#0077ff); }
+
+.cta-box { text-align: center; margin-top: 3.125rem; }
+.cta-box a {
+  display:inline-block;
+  background: var(--primary,#0077ff);
+  color:#fff;
+  padding:1rem 1.75rem;
+  border-radius:0.75rem;
+  font-weight:700;
+  font-size:1.1rem;
+  text-decoration:none;
+  transition: background 0.2s;
+}
+.cta-box a:hover { background: var(--secondary,#00c3ff); }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  inset: 0;
+  background: rgba(0,0,0,0.4);
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  overflow-y: auto;
+}
 
 .modal-content {
   position: relative;
-  background: #fdf1c7; /* color papel amarillento */
-  padding: 30px 25px;
-  border-radius: 12px;
-  max-width: 500px;
-  width: 90%;
-  font-family: 'Nunito', sans-serif;
-  box-shadow: 0 8px 25px rgba(0,0,0,0.3);
-  transform: rotate(-2deg); /* ligera rotación para efecto casual */
-  border-top: 6px solid #e5c16f; /* línea tipo adhesivo */
+  background: #fdf1c7;
+  padding: 2rem 1.5rem;
+  border-radius: 0.75rem;
+  max-width: 31.25rem;
+  width: 100%;
+  max-height: 85vh;
+  overflow-y: auto;
+  box-shadow: 0 0.5rem 1.5625rem rgba(0,0,0,0.3);
+  transform: rotate(-2deg);
+  border-top: 0.375rem solid #e5c16f;
   animation: fadeIn 0.3s ease;
+  font-family: 'Nunito', sans-serif;
+  overflow: visible;
+  margin-top: 4rem;
 }
 
-/* Chincheta */
 .modal-content::before {
-  content: '';
+  content: "";
   position: absolute;
-  top: -12px;
-  right: 20px;
-  width: 16px;
-  height: 16px;
-  background: red;
-  border-radius: 50%;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.4);
+  top: -0.8rem;
+  left: -0.8rem;
+  width: 3rem;
+  height: 3rem;
+  background: url('chincheta.png') no-repeat center center;
+  background-size: contain;
+  z-index: 9999;
+  pointer-events: none;
 }
 
-/* Cerrar */
 .close {
   position: absolute;
-  top: 10px;
-  right: 14px;
-  font-size: 24px;
+  top: 0.625rem;
+  right: 0.875rem;
+  font-size: 1.6rem;
   font-weight: bold;
   cursor: pointer;
   color: #d35400;
+  user-select: none;
+  z-index: 9999;
 }
 .close:hover { color: #e67e22; }
 
+.pin-icon {
+  position: absolute;
+  top: -1rem;
+  right: 1.5625rem;
+  width: 2.5rem;
+  height: auto;
+  z-index: 10000;
+  pointer-events: none;
+  transform: rotate(2deg);
+}
+
 @keyframes fadeIn {
-  from { opacity: 0; transform: translateY(-20px) rotate(-2deg); }
+  from { opacity: 0; transform: translateY(-1.25rem) rotate(-2deg); }
   to { opacity: 1; transform: translateY(0) rotate(-2deg); }
 }
 
+@media (max-width: 758px) {
+  .modal { align-items: flex-start; padding-top: 2rem; }
 
-  </style>
+  .modal-content {
+    padding: 1.5rem 1rem;
+    border-radius: 0.625rem;
+    max-width: 90%;
+    max-height: 80vh;
+    overflow-y: visible;
+    -webkit-overflow-scrolling: touch;
+    scrollbar-width: thin;
+    scrollbar-color: #e0c97f #fdf1c7;
+  }
+
+  .modal-content::-webkit-scrollbar { width: 0.375rem; }
+  .modal-content::-webkit-scrollbar-thumb { background: #e0c97f; border-radius: 0.25rem; }
+
+  .modal-content::before {
+    top: -0.5rem;
+    left: -0.5rem;
+    width: 2.2rem;
+    height: 2.2rem;
+    z-index: 100000;
+  }
+
+  .close {
+    font-size: 1.4rem;
+    top: 0.5rem;
+    right: 0.625rem;
+  }
+}
+</style>
+
 </head>
 <body>
 
