--- a/blog.html
+++ b/blog.html
@@ -12,9 +12,11 @@
   <!-- Estilos -->
   <link rel="stylesheet" href="styles.css">
  <style>
+/* ------------------ GLOBAL ------------------ */
 body { font-family: 'Nunito', sans-serif; margin:0; padding:0; }
 header { margin-bottom: 3rem; }
 
+/* ------------------ HERO ------------------ */
 .blog-hero {
   text-align: center;
   padding: 5rem 1.25rem;
@@ -27,12 +29,14 @@ header { margin-bottom: 3rem; }
 .blog-hero h2 { font-size: 2.4rem; margin-bottom: 0.625rem; }
 .blog-hero p { font-size: 1.1rem; opacity: 0.9; }
 
+/* ------------------ GRID ------------------ */
 .grid {
   display: grid;
   gap: 1.5rem;
   grid-template-columns: repeat(auto-fit, minmax(17.5rem, 1fr));
 }
 
+/* ------------------ CARD ------------------ */
 .card {
   background: #fff;
   border-radius: 1rem;
@@ -82,6 +86,7 @@ header { margin-bottom: 3rem; }
 }
 .cta-box a:hover { background: var(--secondary,#00c3ff); }
 
+/* ------------------ MODAL ------------------ */
 .modal {
   display: none;
   position: fixed;
@@ -91,7 +96,6 @@ header { margin-bottom: 3rem; }
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  overflow-y: auto;
 }
 
 .modal-content {
@@ -101,17 +105,17 @@ header { margin-bottom: 3rem; }
   border-radius: 0.75rem;
   max-width: 31.25rem;
   width: 100%;
-  max-height: 85vh;
-  overflow-y: auto;
+  max-height: 85vh; /* altura máxima en desktop */
+  overflow-y: visible; /* scroll si se excede */
   box-shadow: 0 0.5rem 1.5625rem rgba(0,0,0,0.3);
   transform: rotate(-2deg);
   border-top: 0.375rem solid #e5c16f;
   animation: fadeIn 0.3s ease;
   font-family: 'Nunito', sans-serif;
-  overflow: visible;
   margin-top: 4rem;
 }
 
+/* Chincheta/pin */
 .modal-content::before {
   content: "";
   position: absolute;
@@ -121,10 +125,11 @@ header { margin-bottom: 3rem; }
   height: 3rem;
   background: url('chincheta.png') no-repeat center center;
   background-size: contain;
-  z-index: 9999;
+  z-index: 10000; /* siempre encima de todo */
   pointer-events: none;
 }
 
+/* Cerrar */
 .close {
   position: absolute;
   top: 0.625rem;
@@ -134,57 +139,49 @@ header { margin-bottom: 3rem; }
   cursor: pointer;
   color: #d35400;
   user-select: none;
-  z-index: 9999;
+  z-index: 10001; /* encima del pin */
 }
 .close:hover { color: #e67e22; }
 
-.pin-icon {
-  position: absolute;
-  top: -1rem;
-  right: 1.5625rem;
-  width: 2.5rem;
-  height: auto;
-  z-index: 10000;
-  pointer-events: none;
-  transform: rotate(2deg);
-}
-
+/* Animación */
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(-1.25rem) rotate(-2deg); }
   to { opacity: 1; transform: translateY(0) rotate(-2deg); }
 }
 
+/* ------------------ MODAL MOBILE ------------------ */
 @media (max-width: 758px) {
-  .modal { align-items: flex-start; padding-top: 2rem; }
+  .modal { align-items: flex-start; padding-top: 1rem; }
 
   .modal-content {
     padding: 1.5rem 1rem;
     border-radius: 0.625rem;
     max-width: 90%;
-    max-height: 80vh;
-    overflow-y: visible;
+    max-height: 80vh; /* altura máxima en mobile */
+    overflow-y: auto;  /* scroll interno si es necesario */
     -webkit-overflow-scrolling: touch;
-    scrollbar-width: thin;
-    scrollbar-color: #e0c97f #fdf1c7;
   }
 
+  /* Scrollbar opcional */
   .modal-content::-webkit-scrollbar { width: 0.375rem; }
   .modal-content::-webkit-scrollbar-thumb { background: #e0c97f; border-radius: 0.25rem; }
 
   .modal-content::before {
-    top: -0.5rem;
-    left: -0.5rem;
-    width: 2.2rem;
-    height: 2.2rem;
-    z-index: 100000;
+    top: 0rem;
+    left: 0.5rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    z-index: 10000; /* siempre encima del contenido */
   }
 
   .close {
     font-size: 1.4rem;
     top: 0.5rem;
     right: 0.625rem;
+    z-index: 10001; /* encima del pin */
   }
 }
+
 </style>
 
 </head>
